# LLM-benchmark

./: README.md
IFBench/: .gitignore  (+4 more)
swebench/swebench-kit/: AGENTS.md  README.md  README_hera.md  RULES.md  config.example.yaml  gold.smoke106_mpl.json  gold.smoke106gold.json  gold_calibration.gold_cal.json  kit.py  pyproject.toml  run.sh  run_queue.sh
swebench/swebench-kit/configs/: smoke.yaml
swebench/swebench-kit/data/: lite100_filter.txt  lite75_filter.txt  lite75_ids.txt  lite75_manifest.tsv  make_lite75.py
swebench/swebench-kit/data/reqs_cache/: get_environment_yml_by_commit__matplotlib_matplotlib__0849036fd992a2dd133a0cffc3f84f58ccf1840f__testbed  get_environment_yml_by_commit__matplotlib_matplotlib__73909bcb408886a22e2b84581d6b9e6d9907c813__testbed  get_environment_yml_by_commit__matplotlib_matplotlib__de98877e3dc45de8dd441d008f23d88738dc015d__testbed  get_environment_yml_by_commit__pydata_xarray__087ebbb78668bdf5d2d41c3b2553e3f29ce75be1__testbed  get_environment_yml_by_commit__pydata_xarray__1c198a191127c601d091213c4b3292a8bb3054e1__testbed  get_environment_yml_by_commit__pydata_xarray__50ea159bfd0872635ebf4281e741f3c87f0bef6b__testbed  get_environment_yml_by_commit__pydata_xarray__d7931f9014a26e712ff5f30c4082cf0261f045d3__testbed  get_requirements_by_commit__django_django__0fbdb9784da915fce5dcc1fe82bac9b4785749e5  get_requirements_by_commit__django_django__419a78300f7cd27611196e1e464d50fd0385ff27  get_requirements_by_commit__django_django__475cffd1d64c690cdad16ede4d5e81985738ceb4  (+4 more)
swebench/swebench-kit/migrate/: pack_eval_env.sh  setup_eval_env.sh
(+5073 files in other folders)
